# pixloc

./: .gitignore  CMakeLists.txt  README.md
src/pixloc/: cli-options.cc  cli_options.cc  cli_options.h  config.h.in  main.cc
src/pixloc/helper/: helper_strings.cc  helper_strings.h  strings.cc  strings.h
src/pixloc/models/: color-matcher.cc  color-matcher.h  color_matcher.cc  color_matcher.h  color_matcher_abstract.cc  color_matcher_abstract.h  color_matcher_precise.cc  color_matcher_precise.h  color_matcher_range.cc  color_matcher_range.h  pixel-scanner.cc  pixel-scanner.h  pixel_scanner.cc  pixel_scanner.h
